# mongolian_rabbit_search

./: README.md
Consumer/: Cargo.toml
Consumer/src/: main.rs
Publisher/: Cargo.toml
Publisher/src/: main.rs
