[package]
name = "Consumer"
version = "0.1.0"
edition = "2021"

[dependencies]
lapin = "2.1"
elasticsearch = "8.17.0-alpha.1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
uuid = { version = "1.3", features = ["v4"] }
mongodb = "2.8"
serde = { version = "1", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
serde_json = "1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
url = "2.5.4"
